<resources>
    <string name="app_name">Stock Pro Final</string>
    <string name="StockQuotes">Fetch Quote</string>
    <string name="Portfolio">Manage Portfolio</string>
    <string name="Settings">Settings</string>
    <string name="addToPortfolio">Add to Portfolio</string>
    <string name="symbol">SYMBOL</string>
    <string name="name"></string>
    <string name="price">Current Price: </string>
    <string name="change">Change: </string>
    <string name="high">Day High: </string>
    <string name="low">Day Low: </string>
    <string name="volume">Volume</string>
    <string name="refreshed">Refereshed at: 07/12/2016 3:45 PM EST</string>
    <string name="search_hint">Symbol</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Del</string>
    <string name="add">Add</string>
    <string name="qty">QTY</string>
    <string name="searchsymbol">Symbol</string>
    <string name="portofolioTitle">Manage Portofolio</string>
    <string name="save">Save</string>
    <string name="backgroundSyncSettings">Background Sync</string>
    <string name="settingsTitle">Settings</string>
    <string name="backgroundSyncSettingsDesc">Refresh portfolio at set intervals</string>
    <string name="search">Search</string>
    <string name="appTitle">Stock Pro</string>
    <string name="Author">Jami Schwarzwalder</string>
    <string name="cats_pajamas_desc">Logo</string>
    <string name="priceToEarningsRatio">Price to Earnings</string>
    <string name="earningsPerShare">Earnings per Share</string>
    <string name="yearRange">52 Week Range</string>
    <string name="lastPurchased">Last Traded:</string>
    <string name="openPrice">Price at Opening Today:</string>
    <string name="prevPrice">Previous Day - Closing Price:</string>
    <string name="date_purchased">Date Purchased</string>
    <string name="price_when_purchased">Price When Purchased</string>
    <string name="quantity_purchased">Quantity Purchased</string>
    <string name="current_data">Current Data</string>
    <string name="list">Stock List</string>
    <string name="del">Del</string>
</resources>
