<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="10dp"
    android:scrollIndicators="right"
    android:foregroundGravity="fill_horizontal">

    <EditText
        android:id="@+id/search"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/searchsymbol"
        android:padding="10dp"
        android:inputType="textCapCharacters"/>

    <Button

        android:id="@+id/searchButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/add"
        android:textAllCaps="false"
        android:onClick="onSearch"
        android:textColor="@color/white"

        />



    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="100dp"
        android:text="@string/symbol" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/name" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/price" />

    <TextView
        android:id="@+id/prevDayClosePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/price" />

    <TextView
        android:id="@+id/priceAtOpening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/price" />

    <TextView
        android:id="@+id/lastPurchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/price" />

    <TextView
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/change"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/changePercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/change"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/high" />

    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/low" />


    <TextView
        android:id="@+id/yearRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/change"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/earningsPerShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/change"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/priceToEarningsRatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/change"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/volume"
        android:layout_marginBottom="100dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/qty"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/search"
            android:background="@color/white"
            android:hint="@string/qty"
            android:inputType="number"
            android:onClick="onAdd"
            android:padding="10dp"/>

        <Button

            android:id="@+id/addButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/green"
            android:text="@string/add"
            android:textAllCaps="false"
            android:onClick="onAdd"
            android:textColor="@color/white"

            />

    </LinearLayout>


</LinearLayout>